--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,13 @@ name = "pypi"
 [packages]
 fastapi = "*"
 uvicorn = "*"
-dependency = "*"
-gunicorn = "*"
+sqlalchemy = "*"
+pydantic = "*"
+email-validator = "*"
+bcrypt = "*"
+passlib = "*"
+python-jose = "*"
+python-multipart = "*"
 
 [dev-packages]
 
